tests/invalid/max_list_non_numeric/main.py
def run_case() -> None:
    x: str = max(["a", "b"])


if __name__ == "__main__":
    run_case()
